# rust-av

codec/: Cargo.toml
codec/src/: decoder.rs  encoder.rs  error.rs  lib.rs
data/: Cargo.toml
data/src/: audiosample.rs  frame.rs  lib.rs  packet.rs  params.rs  pixel.rs  tests.rs  timeinfo.rs  value.rs
data/src/tests/: frame.rs  misc.rs  packet.rs  pixel.rs
format/src/buffer/: accreader.rs
