[package]
name = "av-data"
description = "Multimedia data structures"
version = "0.4.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
homepage = "https://github.com/rust-av/rust-av"
keywords = ["multimedia"]
readme = "README.md"
edition = "2021"

[features]
std = []

[dependencies]
byte-slice-cast = { version = "1.2.1", default-features = false }
bytes = { version = "1.2.1", default-features = false }
num-rational = { version = "0.4.0", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
num-derive = "0.3"

[[test]]
name = "pixel"
path = "src/tests/pixel.rs"

[[test]]
name = "frame"
path = "src/tests/frame.rs"

[[test]]
name = "packet"
path = "src/tests/packet.rs"
required-features = ["std"]

[[test]]
name = "misc"
path = "src/tests/misc.rs"
